# pyscx

./: .buildinfo  .gitignore  README.RU.md  README.md  examples.html  genindex.html  index.html  objects.inv  pyproject.toml  quickstart.html  reference.html  search.html  searchindex.js
.doctrees/: environment.pickle  examples.doctree  index.doctree  quickstart.doctree  reference.doctree
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: docs.yml  python-publish.yml
_sources/: examples.rst.txt  index.rst.txt  quickstart.rst.txt  reference.rst.txt
docs/source/: conf.py  examples.rst  index.rst  quickstart.rst  reference.rst
examples/: api_via_diff_token_num.py  token_redefinition.py
pyscx/: __init__.py  api.py  base.py  exceptions.py  http.py  methods.py  objects.py  region.py  token.py
tests/: conftest.py  conftests.py  fixtures.py  test_methods.py  test_objects.py
