[project]
name = "pyscx"
version = "0.1.0"
description = "A library for interacting with the STALCRAFT: X API"
authors = [
    {name = "Oidaho", email = "oidaho.main@yandex.ru"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"

